Auth e criação de perfil, compania e primeira unidade adicionada

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html {
-  font-size: 90%;
+.size-90 {
+  font-size: 90% !important;
 }
 @layer base {
   :root {
